--- a/src/app/todo-list.component.html
+++ b/src/app/todo-list.component.html
@@ -1,3 +1,5 @@
-<h2>Items</h2>
-<input type="text" id="title" placeholder="Enter new item..." (keyup.enter)="Create()" [(ngModel)]="titleVal"/>
+<div class="d:f m-t:2 m-b:2 j-c:c">
+    <input type="text" id="title" placeholder="Enter new item..." (keyup.enter)="Create()" [(ngModel)]="titleVal"/>
+    <button (click)="Create()">Create</button>
+</div>
 <todo-item *ngFor="let todo of todos | async" [item]="todo" (onRemove)="Remove($event)"></todo-item> 
