--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,9 +1,22 @@
 $font-serif: 'Noto Serif', sans-serif;
 
-$c-0: #A1A838;	// Main Primary color */
-$c-1: #747C00;
-$c-2: #848D00;
-$c-3: #BFC382;
-$c-4: #DEDEDE;
+$natural-black: #111111;
+$darker-gray: #333333;
+$dark-gray: #666666;
+$gray: #999999;
+$light-gray: #CCCCCC;
+$lighter-gray: #F3F3F3;
+$white: #FFFFFF;
+$ted-red: #E62B1E;
+$yellow: #FFFF66;
+$orange-yellow: #FFCC00;
+$orange: #FF9900;
+$blue:#003366; 
+$white: #fff;
+$black: #000;
+$brown: #B95835;
+$light-brown: #E18942;
+$bg-color: #3D3242;
+
 
 $border-radius: 5px;
