--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
 @import '../variables.scss';
 
 .main-header {
-    background: $c-0;
-    color: white;
+    background: $brown;
+    color: $white;
     padding: 1.5rem;
 
     display: flex;
