--- a/src/app/todo-item.component.scss
+++ b/src/app/todo-item.component.scss
@@ -2,54 +2,105 @@
 
 .todo-item {
     padding: 1.5rem;
-    background: $c-4;
-    color: black;
+    background: $orange-yellow;
+    color: $black;
     border-radius: $border-radius;
-    margin-bottom: 1rem;
-    box-shadow: 0px 0px 5px $c-1;
+    box-shadow: 0px 0px 5px $black;
 
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
 
     position: relative;
-
+    z-index: 2;
     > .title {
         font-weight: 700;
         font-size: 1.25rem;
     }
 
-    > .remove {
-        position: absolute;
-        right: -125px;
-        top: 15px;
+    > .show-details {
+        cursor: pointer;
     }
 
-    > .details-wrapper {
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
+    .remove {
+        position: relative;
+        min-width: 25px;
+        min-height: 25px;
+        display: block;
+        cursor: pointer;
 
-        > input {
-            &:checked {
-                & + .details {
-                    transition: max-height .2s ease-out .1, opacity .2s ease-out;
-                    max-height: 40rem;
-                    opacity: 1;
-                }
+        &:hover,
+        &:focus {
+            &::after,
+            &::before {
+                border-color: $ted-red;
+            }
+
+            &::after {
+                transform: rotate(225deg);
+            }
+
+            &::before {
+                transform: rotate(-225deg);
             }
         }
 
-        > .details {
-            transition: max-height .2s ease-in, opacity .2s ease-in .1s;
-            max-height: 0;
-            opacity: 0;
+        &::after,
+        &::before {
+            content: '';
+            position: absolute;
+            top: 35%;
+            left: 0;
+            width: 25px;
+            height: 0;
+            border-top: 4px solid $blue;
+            display: block;
+
+            transition: all .2s ease-in-out;
+        }
+
+        &::after {
+            transform: rotate(45deg); 
+        }
+
+        &::before {
+            transform: rotate(-45deg);
+        }
+    }
+}
+
+.details {
+    transform: translateX(100%);
+    transition: transform .2s ease-in-out;
+    border-radius: $border-radius;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    box-shadow: 0px 0px 5px $black;
+    background: $light-brown;
+    margin-left: 1rem;
+    margin-right: 1rem;
+
+    color: $white;
+    z-index: 0;
+
+    &.tease {
+        transform: translateX(80%);
+    }
+    &.show {
+        transform: translateX(0);
+    }
+
+
+    > .info {
+        display: flex;
+        flex-flow: row wrap;
+        padding: 1rem;
+
+        > .by,
+        > .updated {
+            display: block;
+            flex-basis: 100%;
         }
     }
 }
