--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,40 @@
 @import './variables.scss';
+@import '../node_modules/shed-css/lib/index.css';
+@import "../node_modules/shed-css/lib/generate-theme.scss";
+
+// expects a map of colors like this:
+$my_colors: (
+	black: $natural-black,
+	gray-dd: $darker-gray,
+	gray-d: $dark-gray,
+	gray: $gray,
+	gray-l: $light-gray,
+	gray-ll: $lighter-gray,
+	white: $white,
+    red: $ted-red,
+    yellow: $yellow,
+    o-yellow: $orange-yellow,
+    orange: $orange,
+    blue: $blue,
+    brown: $brown,
+    l-brown: $light-brown,
+    bg-color: $bg-color
+);
+
+
+// expects a map of breakpoints like this:
+$my_breakpoints: (
+	n: 'none',
+	xs: "min-width: 500px",
+	sm: "min-width: 700px",
+	md: "min-width: 900px",
+	lg: "min-width: 1100px",
+	xl: "min-width: 1300px"
+);
+
+// execute the mixin outside of a selector
+@include generate-theme($my_breakpoints, $my_colors);
+
 
 body,
 html {
@@ -11,7 +47,7 @@ body {
     font-size: 100%;
     font-weight: normal;
     font-family: $font-serif;
-    background: $c-3;
+    background: $bg-color;
     * {
         box-sizing: border-box;
     }
@@ -31,24 +67,67 @@ p {
 .container {
     max-width: 75em;
     margin: 0 auto;
+    width: 100%;
 }
 
 input,
 button {
-    border: 3px solid white;
-    border-radius: $border-radius;
-    background-color: $c-1;
-    color: white;
-    font-weight: 700;
-    font-size: 1.25rem;
-    line-height: 1.25;
-    padding: .5rem 1rem;
-    cursor: pointer;
+    padding: .5rem 1.5rem;
+    color: $blue;
+    background-color: $white;
+    font-size: 1.2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 12rem;
+    border: .2rem solid $blue;
+    -webkit-transition: color .3s,border .3s;
+    transition: color .3s,border .3s;
+}
 
-    transition: background-color .2s ease-in-out;
-
-    &:hover,
-    &:focus {
-        background-color: #{darken($c-1, 10%)};
+.checkbox-wrapper {
+    position: relative;
+    & label {
+        height: 40px;
+        width: 40px;
+        z-index: 0;
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        
+        & div {
+          height: 20px;
+          width: 20px;
+          border: solid 3px $white;
+          margin: 10px;
+          border-radius: 50%;
+          transform: rotate(45deg);
+          
+          transition: all 100ms ease-in-out, border 50ms ease 100ms;
+        }
+    }
+      
+    & input {
+        height: 40px;
+        width: 40px;
+        margin: 0;
+        opacity: 0;
+        z-index: 1;
+        position: relative;
+        cursor: pointer;
+         
+        &:checked + label > div {
+          border-radius: 0;
+          border-top: 0;
+          border-left: 0;
+          border-color: $blue;
+          height: 25px;
+          width: 15px;
+          margin-top: 3px;
+          margin-left: 14px;
+          transform: rotate(40deg);
+          
+          transition: all 150ms ease-in-out;
+        }
     }
 }
